@@ -73,6 +73,8 @@ void KDevIDEExtension::createGlobalSettingsPage(KDialogBase *dlg)
     config->setGroup("TerminalEmulator");
     gsw->terminalButtonGroup->setButton( config->readNumEntry( "UseKDESetting", 0 ) );
     gsw->terminalEdit->setText( config->readEntry( "TerminalApplication", QString::fromLatin1("konsole") ) );
+    gsw->syncTerminalEmulator->setChecked(config->readBoolEntry("SyncTerminalEmulator"));
+
 }
 
 void KDevIDEExtension::acceptGlobalSettingsPage(KDialogBase *dlg)
@@ -98,6 +100,7 @@ void KDevIDEExtension::acceptGlobalSettingsPage(KDialogBase *dlg)
     config->setGroup("TerminalEmulator");
     config->writeEntry("UseKDESetting", gsw->useKDETerminal->isChecked() );
     config->writeEntry("TerminalApplication", gsw->terminalEdit->text().stripWhiteSpace() );
+    config->writeEntry("SyncTerminalEmulator",gsw->syncTerminalEmulator->isChecked());
 }
 
 QString KDevIDEExtension::xmlFile()
